Sun Oct  4 22:56:46 1998  Gray Watson  <gray@burger.letters.com>

	* Released dmalloc version 4.0.0.

	* Updated the manual a bit.

	* Made a small change to the solaris return.h code.  Thanks
        Alexandre.

Tue Sep 29 09:26:50 1998  Gray Watson  <gray@burger.letters.com>

	* Releasing dmalloc version 4.0.0 beta2. 

	* Aligned valloc to block alignment as it should have been with
        fence post checking installed.

	* Renamed some internal variables and macros better names.

Mon Sep 28 17:55:24 1998  Gray Watson  <gray@burger.letters.com>

	* Added better auto-configuration of valloc.

	* Improved the log-trans output messages.

	* Added the printf attribute to error.c's dmalloc_message.  Fixed
        a number of casting problems.

Fri Sep 18 13:37:23 1998  Gray Watson  <gray@burger.letters.com>

	* Releasing dmalloc version 4.0.0 beta.

	* Added recalloc support into the library.  Thanks to Nick
        Albright for suggesting it.

	* Cleaned up the calloc special handling and accounting.
        Simplified the local malloc functions in malloc.c.

	* Added valloc support to the library after it was determined that
        OSF thread libraries still use the function.  memalign will be
        much harder to add.

Thu Sep 17 08:42:14 1998  Gray Watson  <gray@burger.letters.com>

	* Improved the pthread autoconfiguration and the code.  Removed
        the gross macro code sections.

	* Lots of small code improvements.

	* Got rid of the _dmalloc_file and _dmalloc_line stuff which was
	_very_ unportable.  Thanks Marty for pointed this out.  Reduced
	the race conditions there and improved the handling of default
	values.

	* Added FTX return.h information.  Thanks to Wim van Duuren.

Wed Sep 16 16:28:49 1998  Gray Watson  <gray@burger.letters.com>

	* Added direct strdup support to the library with the assocated
	leap functions.

Tue Feb 10 21:12:40 1998  Gray Watson  <gray@burger.letters.com>

	* Releasing version 3.3.1 to get rid of the -beta.
